WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121869
WinCairo shouldn't check AAS
https://bugs.webkit.org/show_bug.cgi?id=121869
Summary
WinCairo shouldn't check AAS
Alex Christensen
Reported
2013-09-24 14:34:32 PDT
Right now, WinCairo's WinLauncher cannot be used without installing the QuickTime or old Safari on the computer. I would like my daily builds to be able to be used with as few dependencies as possible. This patch would narrow that down to only the VS2010 redistributables.
Attachments
Patch
(6.96 KB, patch)
2013-09-24 14:35 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(6.96 KB, patch)
2013-09-24 14:36 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.34 KB, patch)
2013-09-25 12:20 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(10.86 KB, patch)
2013-09-25 16:47 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(10.28 KB, patch)
2013-09-25 17:08 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2013-09-24 14:35:22 PDT
Created
attachment 212505
[details]
Patch
Alex Christensen
Comment 2
2013-09-24 14:36:36 PDT
Created
attachment 212506
[details]
Patch
Alex Christensen
Comment 3
2013-09-25 12:20:06 PDT
Created
attachment 212616
[details]
Patch
Alex Christensen
Comment 4
2013-09-25 16:47:18 PDT
Created
attachment 212639
[details]
Patch
Brent Fulgham
Comment 5
2013-09-25 17:03:53 PDT
Comment on
attachment 212639
[details]
Patch The DLLLauncherWinCairo.props is being added improperly. Turn off the svn:executable bit, and remove the svn:mime-type property so that it will be added as an XML text file.
Alex Christensen
Comment 6
2013-09-25 17:08:55 PDT
Created
attachment 212642
[details]
Patch
Brent Fulgham
Comment 7
2013-09-25 17:20:35 PDT
Comment on
attachment 212642
[details]
Patch r=me
WebKit Commit Bot
Comment 8
2013-09-25 18:04:01 PDT
Comment on
attachment 212642
[details]
Patch Clearing flags on attachment: 212642 Committed
r156440
: <
http://trac.webkit.org/changeset/156440
>
WebKit Commit Bot
Comment 9
2013-09-25 18:04:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug