Removed check for Apple Application Support directory in WinCairo port. https://bugs.webkit.org/show_bug.cgi?id=121869

Patch by Alex Christensen <achristensen@webkit.org> on 2013-09-25
Reviewed by Brent Fulgham.

* DumpRenderTree/DumpRenderTree.vcxproj/DumpRenderTree/DumpRenderTreeLauncher.vcxproj:
* DumpRenderTree/DumpRenderTree.vcxproj/ImageDiff/ImageDiffLauncher.vcxproj:
* WinLauncher/WinLauncher.vcxproj/WinLauncher.vcxproj:
Use DLLLauncherWinCairo.props for WinCairo ports.
* win/DLLLauncher/DLLLauncherMain.cpp:
(wWinMain):
Don't call modifyPath to check for AAS in the WinCairo port.
* win/DLLLauncher/DLLLauncherWinCairo.props: Added to define WIN_CAIRO.

Canonical link: https://commits.webkit.org/139945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156440 268f45cc-cd09-0410-ab3c-d52691b4dbfc